# elternsein

./: .gitignore  Makefile  __init__.py  pyproject.toml
data/: sources.py
data/processed/: eg_dauer.parquet  eg_dauer.xlsx  eg_empf.parquet  eg_hoehe.parquet  ewz.parquet  geburten.parquet  kreise_steuern_egdauer.parquet  steuern.parquet  steuern.xlsx
data/raw/: destatis 12411-0010 - Bevölkerung.csv  destatis 12612-0100 - Geburten 2009-2021.csv  destatis 22922-0025 - Elterngeldempfänger 2009-2021.csv  destatis 22922-0118 - dschn Höhe Elterngeld.csv  destatis 22922-0125 - dschn Dauer EGeld Kreise.csv  regionalstatistik 73111-01-01-4 - Steuern.csv
elternsein/: __init__.py  colors.py  config.py  download.py  i18n.py  import.py  utils.py
elternsein/prose/: eg_dauer.md  eg_empf.md  egb.md  geburten.md  intro.md  map_egdauer.md  map_taxes.md  sct_egdauer_taxes.md  taxes.md  taxes_egdauer.md
elternsein/viz/: __init__.py  cht_births.py  cht_eg.py  cht_eg_births.py  cht_krs_steuern_bezdauer.py  map_bezdauer.py  map_steuern.py
i18n/: dictionary.json
notebooks/: mctest.ipynb  scratch.ipynb
