[tool.poetry]
name = "elternsein"
version = "0.1.0"
description = "Datenexploration zu Elternschaft & Elterngeld"
authors = ["Andreas Domberg <andom@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
plotly = "^5.21.0"
dash = "^2.16.1"
matplotlib = "^3.8.4"
pyarrow = "^15.0.2"
openpyxl = "^3.1.2"
nbformat = "^5.10.4"
dash-bootstrap-components = "^1.6.0"
flask = "^3.0.3"
geopandas = "^0.14.3"
chardet = "^5.2.0"
colormath = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
